# pstexplorer

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  dist-workspace.toml  docker-compose.yml  prek.toml
.github/workflows/: checks.yml  plugin-tests.yml
llmquery/: query.py
ner/: main.py  pyproject.toml
plugins/: email_view.py
src/: main.rs
testdata/: testPST.db
tests/: test_email_view.py
ui/: .gitignore  Info.plist  Justfile  PSTBrowser.swift
