[package]
name = "pstexplorer"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/stchris/pstexplorer"
description = "A CLI tool to explore and extract data from Outlook PST files"
homepage = "https://github.com/stchris/pstexplorer"
license = "MIT OR Apache-2.0"

[dependencies]
outlook-pst = "1.1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
compressed-rtf = "1.0"
rtf-parser = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.release]
publish = false
pre-release-hook = [
  "git",
  "cliff",
  "-o",
  "CHANGELOG.md",
  "--tag",
  "{{version}}",
]